test/ui/src/compile_fail/std/dbg_control_param.rs
fn main() {
    emit::dbg!(a: 42, "text");
}
